# bidforge

./: .gitignore  README.md  agents.md  package-lock.json  package.json  requirements.txt  turbo.json  vercel-requirements.txt  vercel.json
api/: .env.example  deps.py  index.py  pyproject.toml  requirements.txt  router.py
api/app/: __init__.py  main.py
api/app/config/: settings.py
api/app/contracts/: __init__.py  errors.py  proposal_public.py
api/app/core/: config.py  exception_handlers.py  logging.py
api/app/integrations/: langfuse.py  llm_factory.py  postgrest_errors.py  proposal_store.py  supabase.py  supabase_tables.py  workspace_settings_store.py
api/app/middleware/: rate_limit.py
api/app/modules/: hydration_aliases.py
api/app/modules/documents/: router.py
api/app/modules/meta/: router.py
api/app/modules/profile/: router.py
api/app/modules/proposal/: pdf_export.py  router.py
api/app/modules/workspace/: router.py
api/app/pipeline/: __init__.py  dag_run.py  errors.py  orchestrator.py  title_inference.py
api/app/rag/: retrieval.py
api/app/workspace/: agents.py  extract.py
api/tests/: conftest.py  test_api_contract.py  test_langfuse_trace_mock.py  test_pdf_export.py  test_pipeline_bdd.py  test_pipeline_edges.py  test_pipeline_freelance.py  test_postgrest_errors.py  test_prompts_and_agents_unit.py  test_supabase_persistence.py  test_supabase_project_ref.py  test_title_inference.py  test_title_inference_contract.py  test_workspace_upload_pdf_export.py
apps/api/: .env.example  README.md  package.json  pyproject.toml
docs/: agents.md
(+92 files in other folders)
